tests/parsing/smtlib/poly/errors/052_check-sat-assuming_bad_lit_2.psmt2
(set-logic ALL)
(check-sat-assuming (!))
