tests/parsing/smtlib/poly/errors/052_check-sat-assuming_bad_lit_2.expected
File "tests/parsing/smtlib/poly/errors/052_check-sat-assuming_bad_lit_2.psmt2", line 2, character 21-22:
Error while parsing a list of propositional literals,
      read the reserved word '!',
      but expected a propositional literal, i.e. either a symbol or the
      negation of a symbol.
